coding/c++/lockfree/basic/out
g++ -lpthread -S -O2 atomicsWithoutBarriers.cpp -o atomicsWithoutBarriers 
clang: warning: -lpthread: 'linker' input unused [-Wunused-command-line-argument]
atomicsWithoutBarriers.cpp:56:2: warning: 'sem_init' is deprecated [-Wdeprecated-declarations]
        sem_init( &sem1, 0, 0 );
        ^
/usr/include/sys/semaphore.h:55:42: note: 'sem_init' has been explicitly marked deprecated here
int sem_init(sem_t *, int, unsigned int) __deprecated;
                                         ^
/usr/include/sys/cdefs.h:176:37: note: expanded from macro '__deprecated'
#define __deprecated    __attribute__((deprecated))
                                       ^
atomicsWithoutBarriers.cpp:57:2: warning: 'sem_init' is deprecated [-Wdeprecated-declarations]
        sem_init( &sem2, 0, 0 );
        ^
/usr/include/sys/semaphore.h:55:42: note: 'sem_init' has been explicitly marked deprecated here
int sem_init(sem_t *, int, unsigned int) __deprecated;
                                         ^
/usr/include/sys/cdefs.h:176:37: note: expanded from macro '__deprecated'
#define __deprecated    __attribute__((deprecated))
                                       ^
atomicsWithoutBarriers.cpp:58:2: warning: 'sem_init' is deprecated [-Wdeprecated-declarations]
        sem_init( &restart, 0, 0 );
        ^
/usr/include/sys/semaphore.h:55:42: note: 'sem_init' has been explicitly marked deprecated here
int sem_init(sem_t *, int, unsigned int) __deprecated;
                                         ^
/usr/include/sys/cdefs.h:176:37: note: expanded from macro '__deprecated'
#define __deprecated    __attribute__((deprecated))
                                       ^
atomicsWithoutBarriers.cpp:68:2: error: unknown type name 'cpu_set_t'
        cpu_set_t cpus1;
        ^
atomicsWithoutBarriers.cpp:69:2: error: unknown type name 'cpu_set_t'
        cpu_set_t cpus2;
        ^
atomicsWithoutBarriers.cpp:76:42: error: use of undeclared identifier 'cpu_set_t'
        pthread_setaffinity_np( thread1, sizeof(cpu_set_t), &cpus1 );
                                                ^
atomicsWithoutBarriers.cpp:77:42: error: use of undeclared identifier 'cpu_set_t'
        phtread_setaffinity_np( thread2, sizeof(cpu_set_t), &cpus2 );
                                                ^
3 warnings and 4 errors generated.
make: *** [atomicsWithoutBarriers] Error 1
